# AssetOpsBench

./: .env.public  .gitignore  INSTRUCTIONS.md  README.md  pyproject.toml
aobench/scenario-server/src/scenario_server/: app.py  endpoints.py
aobench/scenario-server/src/scenario_server/grading/: graders.py  util.py
mcp/: .env  README.md  docker-compose.yaml  pyproject.toml
mcp/client/: __init__.py  executor.py  orchestrator.py
mcp/client/tests/: conftest.py  test_models.py  test_orchestrator.py  test_planner.py
mcp/hello_mcp/: hello_mcp.py  mcp_hello.py
mcp/iot_server/: Dockerfile  main.py  requirements.txt
mcp/iot_server/tests/: conftest.py  test_couchdb.py  test_server.py  test_tools.py  test_tools_unit.py
mcp/llm/: __init__.py  litellm.py  watsonx.py
mcp/plan_execute/: cli.py  executor.py  llm.py  models.py  planner.py  runner.py
mcp/plan_execute/tests/: conftest.py  test_models.py  test_planner.py  test_runner.py
mcp/servers/iot/: main.py
mcp/servers/iot/tests/: test_couchdb.py  test_tools.py
mcp/servers/utilities/: main.py
mcp/servers/utilities/tests/: test_utilities.py
mcp/utilities_server/: Dockerfile  main.py  requirements.txt
mcp/utilities_server/tests/: conftest.py  test_utilities.py
