[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plan_execute"]

[project]
name = "assetopsbench-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "couchdb3>=2.0.2",
    "fastmcp>=2.14.5",
    "mcp[cli]>=1.26.0",
    "pendulum>=3.2.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]

[project.scripts]
plan-execute = "plan_execute.cli:main"

[project.optional-dependencies]
# WatsonX LLM backend — required only when using WatsonXLLM in production.
# Install with: pip install "assetopsbench-mcp[watsonx]"
watsonx = [
    "ibm-watsonx-ai>=1.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "anyio>=4.9.0",
    "pytest-anyio>=0.0.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["."]

